--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'French fiction'
+- GITenberg
 title: 'Port-Tarascon
 
   Dernières aventures de l''illustre Tartarin'
